exeptions restructuring and dto clean up...